--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,26 @@ code {
   color: blue;
   background: red;
 }
+
+ol {
+  max-height: 50vh;
+  overflow-y: auto;
+}
+
+ol::-webkit-scrollbar {
+  /* color: white;
+  background-color: #0dcaf0; */
+  /* margin: 0 2px; */
+  width: 10px;
+}
+
+ol::-webkit-scrollbar-track {
+  background-color: #68e4fd;
+  border-radius: 0px 10px 10px 0px;
+  /* padding: 10px; */
+}
+
+ol::-webkit-scrollbar-thumb {
+  background-color: #6c757d;
+  border-radius: 0px 10px 10px 0px;
+}
